Set html and body element heights to 100% to better detect blurring of the navbar menu.  Apply the clear fix to the body to honour the window margin-bottom.

--- a/public_html/css/bse-admin/admin.css
+++ b/public_html/css/bse-admin/admin.css
@@ -6,9 +6,11 @@
 html {
     text-align: center;
     width: 100%;
+    height: 100%;
 }
 body {
 	width: 100%;
+    height: 100%;
     text-align: left;
     margin: 0 auto;
     padding: 2em 0 0 0;
@@ -119,7 +121,7 @@ iframe {
 	-moz-box-shadow: 0 0.1em 0.5em rgba(0,0,0,0.4);
 	box-shadow: 0 0.1em 0.5em rgba(0,0,0,0.4);
 }
-.group:after {
+.group:after, body:after {
 	content: ".";
 	display: block;
 	clear: both;
